# BP-Tree-Index

./: .gitmodules  CMakeLists.txt
src/: BP-Tree.hpp  BP-Tree.tpp  Composite-Key.hpp  Composite-Key.tpp  Index.hpp  Iterators.tpp  main.cpp
src/File-Indexer/: CLI.hpp  CLI.tpp  File-Indexer.hpp  File-Indexer.tpp  File-Info.hpp  Indices.hpp  Search-Criteria.hpp  Search-Criteria.tpp  Search-Result.hpp  System-Watcher.hpp  Tag-Manager.cpp  Tag-Manager.hpp  Utils.hpp
tests/: basic_tests.cpp  bp_tree_tests.cpp  composite_key_tests.cpp  index_tests.cpp
